--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: wugian Bblog
+title: wugian Blog
 SEOTitle: wugian的博客 | BY wugian
 header-img: img/post-bg-desk.jpg
 email: sissilove812@gmail.com
